option(SOUI_ENABLE_GAME_TEST "Enable game test" OFF)
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
add_subdirectory(audio)
include_directories(audio/src)
endif()
if(CMAKE_SYSTEM_NAME MATCHES Darwin)
    find_package(GLEW REQUIRED)
    find_package(glfw3 REQUIRED)
endif()
add_subdirectory(upgrade)
add_subdirectory(cnchess)
add_subdirectory(junqi)